--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    padding: 0;
+    padding: 0;font-family: 'Open Sans', sans-serif;
 }
 
 .header{
@@ -36,3 +36,70 @@ nav{
     text-decoration: none;
     font-size: 13px;
 }
+
+.text-box{
+    width: 90%;
+    color:#fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.text-box{
+    font-size: 62px;
+}
+
+.text-box p{
+    margin: 10px 0 40px;
+    font-size: 14px;
+    color: white;
+}
+
+.hero-btn{
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.hero-btn:hover{
+    border: 1px solid #CFC0C0;
+    background: #CFC0C0;
+    transition: 1s;
+
+}
+
+@media(max-width:700px){
+
+}
+
+
+
+/*------- Coming Soon -----------*/
+.coming-soon{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+h1{
+    font-size: 36px;
+    font-weight: 600;
+}
+
+p{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+
