--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 .header{
-    min-height: 100vh;
+    min-height: 70vh;
     width: 100%;
     background-color: rgb(43, 43, 43);
     background-position: center;
@@ -76,10 +76,14 @@ nav{
 
 }
 
-@media(max-width:700px){
 
+/* -----Coming Soon----- */
+.comingSoon{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
 }
-
 
 h1{
     font-size: 36px;
@@ -87,10 +91,48 @@ h1{
 }
 
 p{
-    color: #fff;
+    color: #777;
     font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
 }
 
+.row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.cs-col{
+    flex-basis: 31%;
+    background: #EAD1AD ;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+}
+
+
+@media(max-width:700px){
+
+}
+
+/* -----footer----- */
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+
+.icons {
+    cursor: pointer;
+    margin: 0 13px;
+    padding: 10px 0;
+}
