--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,3 +136,17 @@ p{
     margin: 0 13px;
     padding: 10px 0;
 }
+
+/* -----Blog Page-----*/
+
+.sub-header{
+    height: 50vh;
+    width:100%;
+    background-color: rgb(43, 43, 43);
+    text-align: center;
+    color: white;
+}
+
+.sub-header h1{
+    margin-top: 90px;
+}
