--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
-    padding: 0;font-family: 'Open Sans', sans-serif;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .header{
@@ -10,6 +11,18 @@
     background-position: center;
     background-size: cover;
     position: relative;
+}
+
+.sub-header{
+   height:15vh;
+    width:100%;
+    background-color: #CFC0C0;
+    text-align: center;
+    color: white;
+}
+
+.sub-header h1{
+    margin-top: 90px;
 }
 
 nav{
@@ -27,7 +40,7 @@ nav{
 .nav-links ul li{
     list-style: none;
     display: inline;
-    padding:8px 12px;
+    padding: 8px 10px;
     position: relative;
 }
 
@@ -77,7 +90,7 @@ nav{
 }
 
 
-/* -----Coming Soon----- */
+/* ----------------------------Coming Soon-------------------- */
 .comingSoon{
     width: 80%;
     margin: auto;
@@ -118,7 +131,7 @@ p{
 
 }
 
-/* -----footer----- */
+/* ---------------------footer--------------------------- */
 .footer{
     width: 100%;
     text-align: center;
@@ -137,64 +150,119 @@ p{
     padding: 10px 0;
 }
 
-/* -----Blog Page-----*/
+/* ----------------------Blog Page-----------------------*/
 
-.blog-content{
-    width: 80%;
-    margin: auto;
-    padding: 60px 0;
-}
-
-.blog-left{
-    flex-basis: 65%
-}
-
-.blog-left img{
-    width: 100%
-}
-
-.blog-left h2{
-    color: #222;
-    font-weight: 600;
-    margin: 30px 0;
-}
-
-.blog-left p{
-    color: #999;
-    padding: 0;
-}
-
-.blog-right{
-    flex-basis: 32%;
-}
-
-.blog-right h3{
-    background:#EAD1AD;
-    color: #fff;
-    padding: 7px 0;
-    font-size: 16px;
-    margin-bottom: 20 px;
-}
-
-.blog-right div{
+#blog{
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    color: #555;
-    padding: 8px;
-    box-sizing: border-box;
-
+    flex-direction: column;
+    padding: 40px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
+.blog-heading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column ;
+}
 
-.sub-header{
-    height: 50vh;
-    width:100%;
-    background-color: rgb(43, 43, 43);
-    text-align: center;
+.blog-heading span{
+    color: black;
+}
+
+.blog-heading h3{
+    font-size: 2.4rem;
+    color: bisque;
+    font-weight: 600;
+}
+
+.blog-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+    flex-wrap: wrap;
+}
+
+.blog-box{
+    width: 350px;
+    background-color: #fff;
+    border: 1px solid beige;
+    margin: 20px;
+}
+
+.blog-img{
+    width: 100%;
+    height: auto;
+}
+
+.blog-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.blog-text{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-text span{
+    color: black;
+    font-size: 0.9rem;
+}
+
+.blog-text .blog-title{
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #272727;
+}
+
+.blog-text .blog-title:hover{
+    color: #f33c3c;
+    transition: all ease 0.3s;
+}
+
+.blog-text p{
+    color: #9b9b9b;
+    font-size: 0.9rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 20px 0px ;
+}
+
+.blog-text a{
+    color: black;
+}
+
+.blog-text a:hover{
+    color: red;
+    transition: all ease 0.3s;
+}
+
+.read-more-btn{
+    display: inline-block;
+    text-decoration: none;
     color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: #CFC0C0;
+    position: relative;
+    cursor: pointer;
+    margin-top: 20px;
 }
 
-.sub-header h1{
-    margin-top: 90px;
+.read-more-btn:hover{
+    border: 1px solid #CFC0C0;
+    background: #CFC0C0;
+    transition: 1s;
+
 }
